--- a/tweaked-themes/apple-dark-tweaked.json
+++ b/tweaked-themes/apple-dark-tweaked.json
@@ -74,8 +74,7 @@
     },
     "title4": {
       "color": "#F0A759",
-      "size": 16,
-      "underlineStyle": 1
+      "size": 16
     },
     "working-on": {
       "backgroundColor": "#77bd93f9",
@@ -208,11 +207,11 @@
     "schedule-from-date-link": {},
     "note-title-link": {},
     "hashtag": {
-      "backgroundColor": "#20FFCC66",
+      "backgroundColor": "#000000FF",
       "paragraphSpacing": 0
     },
     "attag": {
-      "backgroundColor": "#20FFCC66",
+      "backgroundColor": "#000000FF",
       "paragraphSpacing": 0
     },
     "phonenumber": {
@@ -251,15 +250,17 @@
   },
   "tweakedBy": {
     "name": "np-tweak",
-    "date": "2025-08-31T14:34:48Z",
+    "date": "2025-08-31T16:53:35Z",
     "tweaks": [
       "squash.jq",
+      "no-underline-on-titles.jq",
+      "no-background-on-hash-or-at.jq",
       "text-size.jq",
       "font-sfpro.jq"
     ]
   },
   "squashedBy": {
     "name": "np-squash",
-    "date": "2025-08-31T14:34:49Z"
+    "date": "2025-08-31T16:53:35Z"
   }
 }
