--- a/tweaked-themes/apple-dark-tweaked.json
+++ b/tweaked-themes/apple-dark-tweaked.json
@@ -22,59 +22,27 @@
       "font": "SFPro-Regular",
       "size": 16,
       "color": "#EAEAEA",
-      "paragraphSpacing": 0,
-      "title1": {
-        "font": "SFPro-Light"
-      },
-      "title2": {
-        "font": "SFPro-Light"
-      },
-      "title3": {
-        "font": "SFPro-Light"
-      },
-      "title4": {
-        "font": "SFPro-Light"
-      },
-      "title5": {
-        "font": "SFPro-Light"
-      },
-      "title6": {
-        "font": "SFPro-Light"
-      },
-      "title-mark1": {
-        "font": "SFPro-Light"
-      },
-      "title-mark2": {
-        "font": "SFPro-Light"
-      },
-      "title-mark3": {
-        "font": "SFPro-Light"
-      },
-      "title-mark4": {
-        "font": "SFPro-Light"
-      },
-      "title-mark5": {
-        "font": "SFPro-Light"
-      },
-      "title-mark6": {
-        "font": "SFPro-Light"
-      }
+      "paragraphSpacing": 0
     },
     "title1": {
       "color": "#FFA759",
-      "size": 20
+      "size": 20,
+      "font": "SFPro-Light"
     },
     "title2": {
       "color": "#FFA759",
-      "size": 18
+      "size": 18,
+      "font": "SFPro-Light"
     },
     "title3": {
       "color": "#FFA759",
-      "size": 16
+      "size": 16,
+      "font": "SFPro-Light"
     },
     "title4": {
       "color": "#F0A759",
-      "size": 16
+      "size": 16,
+      "font": "SFPro-Light"
     },
     "working-on": {
       "backgroundColor": "#77bd93f9",
@@ -98,22 +66,26 @@
     "title-mark1": {
       "color": "#33FFA759",
       "size": 20,
-      "paragraphSpacing": 3
+      "paragraphSpacing": 3,
+      "font": "SFPro-Light"
     },
     "title-mark2": {
       "color": "#33FFA759",
       "size": 18,
-      "paragraphSpacing": 3
+      "paragraphSpacing": 3,
+      "font": "SFPro-Light"
     },
     "title-mark3": {
       "color": "#33FFA759",
       "size": 16,
-      "paragraphSpacing": 3
+      "paragraphSpacing": 3,
+      "font": "SFPro-Light"
     },
     "title-mark4": {
       "color": "#33FFA759",
       "size": 16,
-      "paragraphSpacing": 3
+      "paragraphSpacing": 3,
+      "font": "SFPro-Light"
     },
     "bold": {
       "color": "#BAE67E",
@@ -138,7 +110,8 @@
       "color": "#3395E6CB"
     },
     "boldItalic": {
-      "type": "bolditalic"
+      "type": "bolditalic",
+      "font": "SFPro-SemiboldItalic"
     },
     "boldItalic-left-mark": {
       "color": "#33FFE67E"
@@ -246,11 +219,23 @@
     },
     "underline-right-tilde": {
       "color": "#55CBCCC6"
+    },
+    "title5": {
+      "font": "SFPro-Light"
+    },
+    "title6": {
+      "font": "SFPro-Light"
+    },
+    "title-mark5": {
+      "font": "SFPro-Light"
+    },
+    "title-mark6": {
+      "font": "SFPro-Light"
     }
   },
   "tweakedBy": {
     "name": "np-tweak",
-    "date": "2025-08-31T16:53:35Z",
+    "date": "2025-08-31T17:00:20Z",
     "tweaks": [
       "squash.jq",
       "no-underline-on-titles.jq",
@@ -261,6 +246,6 @@
   },
   "squashedBy": {
     "name": "np-squash",
-    "date": "2025-08-31T16:53:35Z"
+    "date": "2025-08-31T17:00:20Z"
   }
 }
